fix: withdraw side menu item :before  z-index=-1

--- a/shell/app/styles/util.scss
+++ b/shell/app/styles/util.scss
@@ -408,7 +408,3 @@
 :not(:root):-webkit-full-screen {
   height: 100%;
 }
-
-.ant-menu-item a::before {
-  z-index: -1;
-}
